# meego-icon-theme

./: .gitignore  .vimrc  AUTHORS  COPYING  Changelog  README  convert-all.sh  create-icon-theme.sh  index.theme  legacy-icon-mapping.xml  make-release.sh  render.py  render.rb
Moblin Netbook/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  convert.sh  convert.sh~  index.theme
Moblin Netbook White/: convert-white.sh
Moblin Netbook White/16x16/: Makefile  Makefile.in
Moblin Netbook White/16x16/apps/: Makefile  Makefile.in
Moblin Netbook White/16x16/devices/: Makefile
Moblin Netbook White/16x16/emotes/: Makefile
Moblin Netbook White/16x16/mimetypes/: Makefile
Moblin Netbook White/16x16/places/: Makefile
Moblin Netbook White/16x16/status/: Makefile  Makefile.in
Moblin Netbook White/48x48/apps/: -antialias
Moblin Netbook White/48x48/categories/: -antialias
Moblin Netbook White/48x48/devices/: -antialias
Moblin Netbook White/48x48/emblems/: -antialias
Moblin Netbook White/48x48/emotes/: -antialias
Moblin Netbook White/48x48/mimetypes/: -antialias
Moblin Netbook White/48x48/places/: -antialias
Moblin Netbook White/48x48/status/: -antialias
Moblin Netbook/16x16/: Makefile  Makefile.in
Moblin Netbook/16x16/actions/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/animations/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/apps/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/categories/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/devices/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/emblems/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/emotes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/mimetypes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/places/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/16x16/status/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/: Makefile  Makefile.in
Moblin Netbook/24x24/actions/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/animations/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/apps/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/categories/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/devices/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/emblems/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/emotes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/mimetypes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/places/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/24x24/status/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/actions/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/animations/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/apps/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/categories/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/devices/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/emblems/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/emotes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/mimetypes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/places/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/32x32/status/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/: Makefile  Makefile.in
Moblin Netbook/48x48/actions/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/apps/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/categories/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/devices/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/emblems/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/emotes/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/mimetypes/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/places/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/48x48/status/: -antialias-0  -antialias-1  Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/: Makefile  Makefile.in
Moblin Netbook/64x64/actions/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/apps/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/categories/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/devices/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/emblems/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/emotes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/mimetypes/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/places/: Makefile  Makefile.am  Makefile.in
Moblin Netbook/64x64/status/: Makefile  Makefile.am  Makefile.in
output/moblin/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  icon-name-mapping  index.theme
output/moblin/16x16/: Makefile  Makefile.am  Makefile.in
output/moblin/16x16/icons/: Makefile  Makefile.am  Makefile.in
output/moblin/24x24/: Makefile  Makefile.in
output/moblin/24x24/icons/: Makefile  Makefile.am  Makefile.in
output/moblin/32x32/: Makefile  Makefile.in
output/moblin/32x32/apps/: Makefile  Makefile.am  Makefile.in
output/moblin/48x48/: Makefile  Makefile.am  Makefile.in
output/moblin/48x48/apps/: Makefile  Makefile.am  Makefile.in
output/moblin/48x48/icons/: Makefile  Makefile.am  Makefile.in
output/moblin/autom4te.cache/: output.1  traces.0  traces.1
